<resources>
    <string name="app_name">De Viaje!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="de_viaje_logo">De viaje logo</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register!</u></string>
</resources>