<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/normal_logo"
            android:layout_height="@dimen/normal_logo"
            android:src="@drawable/ic_app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnSignIn"
            android:contentDescription="@string/de_viaje_logo"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            app:layout_constraintBottom_toTopOf="@id/btnContinueAsGuest"
            android:text="@string/sign_in"
            style="@style/Button.Primary"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinueAsGuest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn"
            app:layout_constraintBottom_toTopOf="@id/btnContinueWithGoogle"
            android:text="@string/continue_as_guest"
            style="@style/Button.Secondary"
            />

        <Button
            android:id="@+id/btnContinueWithGoogle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnContinueAsGuest"
            app:layout_constraintBottom_toTopOf="@id/tvRegistrationQuestion"
            android:text="@string/sign_in_with_google"
            style="@style/Button.ThirdParty"
            />

        <TextView
            android:id="@+id/tvRegistrationQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvRegistration"
            app:layout_constraintTop_toBottomOf="@id/btnContinueWithGoogle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginTop="@dimen/small_margin"
            />

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvRegistrationQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/tvRegistrationQuestion"
            android:text="@string/register"
            android:layout_marginStart="4sp"
            android:textColor="?attr/colorPrimaryVariant"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>